# wordle-solver

./: 5_letters.csv  README.md  pyproject.toml
app/: solver.py
tests/: test_solver.py
