[tool.poetry]
name = "wordle-solver"
version = "0.1.0"
description = ""
authors = ["Shawn Larson <slarson62@gmail.com>"]
readme = "README.md"
packages = [{include = "wordle_solver"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
